OAI KB publication links calculation during the first list method call due to use it in Testbed too.